Our Featured Products section added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea House</title>
     <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -42,5 +43,58 @@
       </div>
     </div>
   </header>
+  <!-- Featured Products Section -->
+  <section id="featured">
+    <div class="container">
+      <div class="section-title">
+        <h2>Our <span class="gradient-text">Featured</span> Products</h2>
+        <p>Discover our premium selection of handcrafted teas from the world's finest estates.</p>
+      </div>
+
+      <div class="products-grid">
+
+        <!-- Card 1 -->
+        <div class="product-card">
+          <div class="product-icon icon-milk">
+            <i class="fas fa-mug-hot text-white text-2xl"></i>
+          </div>
+          <h3>Classic Milk Tea</h3>
+          <p>Smooth and creamy with rich milk froth</p>
+          <div class="price">$4.99</div>
+        </div>
+
+        <!-- Card 2 -->
+        <div class="product-card">
+          <div class="product-icon icon-black">
+            <i class="fas fa-leaf fa-2x" style="color: white;"></i>
+          </div>
+          <h3>Premium Black Tea</h3>
+          <p>Bold flavors with perfect balance</p>
+          <div class="price">$5.99</div>
+        </div>
+
+        <!-- Card 3 -->
+        <div class="product-card">
+          <div class="product-icon icon-lemon">
+            <i class="fas fa-lemon fa-2x" style="color: white;"></i>
+          </div>
+          <h3>Refreshing Lemon Tea</h3>
+          <p>Zesty citrus with natural sweetness</p>
+          <div class="price">$4.49</div>
+        </div>
+
+        <!-- Card 4 -->
+        <div class="product-card">
+          <div class="product-icon icon-green">
+            <i class="fas fa-spa fa-2x" style="color: white;"></i>
+          </div>
+          <h3>Organic Green Tea</h3>
+          <p>Pure and delicate with health benefits</p>
+          <div class="price">$6.99</div>
+        </div>
+
+      </div>
+    </div>
+  </section>
 </body>
 </html>
