Perfect Pairings section added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- Card 1 -->
         <div class="product-card">
           <div class="product-icon icon-milk">
-            <i class="fas fa-mug-hot text-white text-2xl"></i>
+            <i class="fas fa-mug-hot fa-2x" style="color: white; "></i>
           </div>
           <h3>Classic Milk Tea</h3>
           <p>Smooth and creamy with rich milk froth</p>
@@ -96,5 +96,62 @@
       </div>
     </div>
   </section>
+
+
+  <!-- NEW SECTION 1: Tea Pairing Guide -->
+<section class="pairing-section">
+  <div class="pairing-title">
+    <h2><span>Perfect</span> Pairings</h2>
+    <p>Elevate your tea experience with our expert pairing recommendations.</p>
+  </div>
+
+  <div class="pairing-grid">
+
+    <!-- Item 1 -->
+    <div class="pairing-card">
+      <div class="pairing-img-wrapper">
+        <img src="https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Scones">
+        <div class="overlay"></div>
+      </div>
+      <h3>English Breakfast</h3>
+      <p class="pair-desc">Scones & Clotted Cream</p>
+      <span class="tag classic">Classic</span>
+    </div>
+
+    <!-- Item 2 -->
+    <div class="pairing-card">
+      <div class="pairing-img-wrapper">
+        <img src="https://img.freepik.com/premium-photo/tea-cup-table-against-black-background_1048944-20153494.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Chocolate">
+        <div class="overlay"></div>
+      </div>
+      <h3>Earl Grey</h3>
+      <p class="pair-desc">Dark Chocolate</p>
+      <span class="tag purple">Sophisticated</span>
+    </div>
+
+    <!-- Item 3 -->
+    <div class="pairing-card">
+      <div class="pairing-img-wrapper">
+        <img src="https://img.freepik.com/premium-photo/tea-cup-lemon-melissa-tea_263357-2033.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Salmon">
+        <div class="overlay"></div>
+      </div>
+      <h3>Green Tea</h3>
+      <p class="pair-desc">Smoked Salmon</p>
+      <span class="tag green">Healthy</span>
+    </div>
+
+    <!-- Item 4 -->
+    <div class="pairing-card">
+      <div class="pairing-img-wrapper">
+        <img src="https://img.freepik.com/premium-photo/traditional-indian-drink-turmeric-golden-milk_926199-2461502.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Cheese">
+        <div class="overlay"></div>
+      </div>
+      <h3>Chai Tea</h3>
+      <p class="pair-desc">Spiced Cookies</p>
+      <span class="tag red">Warm</span>
+    </div>
+
+  </div>
+</section>
 </body>
 </html>
