Explore Our Tea Collection section added

--- a/index.html
+++ b/index.html
@@ -194,7 +194,10 @@
             <div class="tea-text">
                 <h1><span>Great Tea</span>, Freshly Presented</h1>
                 <p>
-                    The meaning of gong cha is Chinese is to provide the best tea to emperor from all possessions. It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its customers because of good words of mouth and unique customized service originated from Taiwan.
+                    The meaning of gong cha is Chinese is to provide the best tea to emperor from all possessions. It
+                    represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply
+                    appreciated by its customers because of good words of mouth and unique customized service originated
+                    from Taiwan.
                 </p>
 
                 <h2>Unique Taste</h2>
@@ -209,59 +212,140 @@
 
 
     <!-- WHY CHOOSE US SECTION -->
-<section class="why-choose-us">
-  <div class="container">
+    <section class="why-choose-us">
+        <div class="container">
 
-    <!-- Section Title -->
-    <div class="choose-title">
-      <h2>Why <span class="orange-gradient">Choose Us</span></h2>
-      <p>We are committed to providing the finest tea experience with unmatched quality and service that sets us apart from the rest.</p>
+            <!-- Section Title -->
+            <div class="choose-title">
+                <h2>Why <span class="orange-gradient">Choose Us</span></h2>
+                <p>We are committed to providing the finest tea experience with unmatched quality and service that sets
+                    us apart from the rest.</p>
+            </div>
+
+            <!-- Features Grid -->
+            <div class="choose-grid">
+
+                <!-- Feature 1 -->
+                <div class="choose-card">
+                    <div class="choose-icon green">
+                        <i class="fas fa-leaf"></i>
+                    </div>
+                    <h3>100% Organic</h3>
+                    <p>All our teas are sourced from certified organic farms ensuring pure quality</p>
+                </div>
+
+                <!-- Feature 2 -->
+                <div class="choose-card">
+                    <div class="choose-icon orange">
+                        <i class="fas fa-shipping-fast"></i>
+                    </div>
+                    <h3>Fast Delivery</h3>
+                    <p>Get your favorite tea delivered to your doorstep within 24-48 hours</p>
+                </div>
+
+                <!-- Feature 3 -->
+                <div class="choose-card">
+                    <div class="choose-icon purple">
+                        <i class="fas fa-award"></i>
+                    </div>
+                    <h3>Award Winning</h3>
+                    <p>Recognized globally for excellence in tea quality and customer service</p>
+                </div>
+
+                <!-- Feature 4 -->
+                <div class="choose-card">
+                    <div class="choose-icon blue">
+                        <i class="fas fa-headset"></i>
+                    </div>
+                    <h3>24/7 Support</h3>
+                    <p>Our dedicated team is always ready to assist you with any queries</p>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="tea-collection">
+  <div class="container">
+    <div class="section-header">
+      <h2>
+        Explore Our
+        <span class="gradient-text">Tea Collection</span>
+      </h2>
+      <p>
+        Discover a world of flavors with our carefully curated selection of
+        premium teas from around the globe.
+      </p>
     </div>
 
-    <!-- Features Grid -->
-    <div class="choose-grid">
-
-      <!-- Feature 1 -->
-      <div class="choose-card">
-        <div class="choose-icon green">
-          <i class="fas fa-leaf"></i>
+    <div class="gallery-grid">
+      <!-- Card 1 -->
+      <div class="gallery-card">
+        <img src="https://img.freepik.com/free-photo/steaming-cup-masala-chai-with-spices-coffee-beans-dark-surface_9975-124574.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Classic Collection">
+        <div class="overlay">
+          <div class="overlay-content">
+            <h3>Classic Collection</h3>
+            <p>Timeless teas loved for generations</p>
+          </div>
         </div>
-        <h3>100% Organic</h3>
-        <p>All our teas are sourced from certified organic farms ensuring pure quality</p>
       </div>
 
-      <!-- Feature 2 -->
-      <div class="choose-card">
-        <div class="choose-icon orange">
-          <i class="fas fa-shipping-fast"></i>
+      <!-- Card 2 -->
+      <div class="gallery-card">
+        <img src="https://img.freepik.com/free-photo/side-view-tea-pouring-into-armudu-glass_140725-12196.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Premium Selection">
+        <div class="overlay">
+          <div class="overlay-content">
+            <h3>Premium Selection</h3>
+            <p>Rare and exclusive tea varieties</p>
+          </div>
         </div>
-        <h3>Fast Delivery</h3>
-        <p>Get your favorite tea delivered to your doorstep within 24-48 hours</p>
       </div>
 
-      <!-- Feature 3 -->
-      <div class="choose-card">
-        <div class="choose-icon purple">
-          <i class="fas fa-award"></i>
+      <!-- Card 3 -->
+      <div class="gallery-card">
+        <img src="https://img.freepik.com/premium-photo/transparent-glass-cup-tea-with-splashes-tea-green-leaves-dark-black-background_1375313-35.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Herbal Blends">
+        <div class="overlay">
+          <div class="overlay-content">
+            <h3>Herbal Blends</h3>
+            <p>Natural wellness in every sip</p>
+          </div>
         </div>
-        <h3>Award Winning</h3>
-        <p>Recognized globally for excellence in tea quality and customer service</p>
       </div>
 
-      <!-- Feature 4 -->
-      <div class="choose-card">
-        <div class="choose-icon blue">
-          <i class="fas fa-headset"></i>
+      <!-- Card 4 -->
+      <div class="gallery-card">
+        <img src="https://img.freepik.com/free-photo/front-view-cup-tea-with-lemon-cinnamon-kettle-grey-surface_140725-63671.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Seasonal Specials">
+        <div class="overlay">
+          <div class="overlay-content">
+            <h3>Seasonal Specials</h3>
+            <p>Limited edition seasonal flavors</p>
+          </div>
         </div>
-        <h3>24/7 Support</h3>
-        <p>Our dedicated team is always ready to assist you with any queries</p>
       </div>
 
+      <!-- Card 5 -->
+      <div class="gallery-card">
+        <img src="https://img.freepik.com/premium-photo/cup-tea-being-poured-into-glass-cup-with-steam-coming-out-it-generative-ai_97167-6300.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Organic Range">
+        <div class="overlay">
+          <div class="overlay-content">
+            <h3>Organic Range</h3>
+            <p>100% certified organic teas</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 6 -->
+      <div class="gallery-card">
+        <img src="https://img.freepik.com/premium-photo/tea-concept-teapot-with-tea-surrounded-wood-background-tea-ceremony-green-tea-transparent-cup_372197-1339.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Gift Sets">
+        <div class="overlay">
+          <div class="overlay-content">
+            <h3>Gift Sets</h3>
+            <p>Perfect presents for tea lovers</p>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </section>
-
-
 </body>
-
 </html>
