Tea Delivered to Your Door section added

--- a/index.html
+++ b/index.html
@@ -265,87 +265,179 @@
         </div>
     </section>
 
+    <!-- NEW SECTION 4: Tea Subscription -->
+    <section class="subscription-section">
+        <div class="subscription-wrapper">
+            <div class="subscription-inner">
+                <h2 class="subscription-title">
+                    <span class="gradient-text">Tea Delivered</span> to Your Door
+                </h2>
+
+                <p class="subscription-desc">
+                    Never run out of your favorite teas. Choose from curated monthly selections
+                    or customize your perfect blend.
+                </p>
+
+                <!-- FEATURES -->
+                <div class="subscription-features">
+                    <div class="feature-card">
+                        <div class="feature-icon">🥰</div>
+                        <h3>Personalized</h3>
+                        <p>We learn your preferences and curate selections just for you</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon">🚚</div>
+                        <h3>Free Shipping</h3>
+                        <p>Complimentary delivery on every subscription box</p>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-icon">💰</div>
+                        <h3>Save 20%</h3>
+                        <p>Exclusive subscriber discounts on all premium blends</p>
+                    </div>
+                </div>
+
+                <!-- PLANS -->
+                <div class="subscription-plans">
+                    <div class="plan-card">
+                        <h4>The Explorer</h4>
+                        <span class="plan-sub">For the adventurous palate</span>
+                        <ul>
+                            <li>• 4 new teas monthly</li>
+                            <li>• Flavor discovery cards</li>
+                            <li>• Brewing guide included</li>
+                        </ul>
+                        <div class="price">$29/month</div>
+                    </div>
+
+                    <div class="plan-card featured">
+                        <div class="featured-overlay"></div>
+                        <div class="featured-content">
+                            <h4>The Connoisseur</h4>
+                            <span class="plan-sub">For the tea expert</span>
+                            <ul>
+                                <li>• 6 premium selections</li>
+                                <li>• Rare single-origin teas</li>
+                                <li>• Tasting journal</li>
+                                <li>• Priority customer service</li>
+                            </ul>
+                            <div class="price">$49/month</div>
+                            <span class="badge">Most Popular</span>
+                        </div>
+                    </div>
+
+                    <div class="plan-card">
+                        <h4>The Family</h4>
+                        <span class="plan-sub">Share the joy</span>
+                        <ul>
+                            <li>• 8 tea varieties</li>
+                            <li>• Family-sized packaging</li>
+                            <li>• Recipe cards included</li>
+                        </ul>
+                        <div class="price">$69/month</div>
+                    </div>
+                </div>
+
+                <!-- CTA -->
+                <a href="#" class="subscription-btn">
+                    Start Your Journey
+                    <svg viewBox="0 0 24 24">
+                        <path d="M17 8l4 4m0 0l-4 4m4-4H3" stroke="currentColor" stroke-width="2" fill="none"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </section>
+
     <section class="tea-collection">
-  <div class="container">
-    <div class="section-header">
-      <h2>
-        Explore Our
-        <span class="gradient-text">Tea Collection</span>
-      </h2>
-      <p>
-        Discover a world of flavors with our carefully curated selection of
-        premium teas from around the globe.
-      </p>
-    </div>
+        <div class="container">
+            <div class="section-header">
+                <h2>
+                    Explore Our
+                    <span class="gradient-text">Tea Collection</span>
+                </h2>
+                <p>
+                    Discover a world of flavors with our carefully curated selection of
+                    premium teas from around the globe.
+                </p>
+            </div>
 
-    <div class="gallery-grid">
-      <!-- Card 1 -->
-      <div class="gallery-card">
-        <img src="https://img.freepik.com/free-photo/steaming-cup-masala-chai-with-spices-coffee-beans-dark-surface_9975-124574.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Classic Collection">
-        <div class="overlay">
-          <div class="overlay-content">
-            <h3>Classic Collection</h3>
-            <p>Timeless teas loved for generations</p>
-          </div>
-        </div>
-      </div>
+            <div class="gallery-grid">
+                <!-- Card 1 -->
+                <div class="gallery-card">
+                    <img src="https://img.freepik.com/free-photo/steaming-cup-masala-chai-with-spices-coffee-beans-dark-surface_9975-124574.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80"
+                        alt="Classic Collection">
+                    <div class="overlay">
+                        <div class="overlay-content">
+                            <h3>Classic Collection</h3>
+                            <p>Timeless teas loved for generations</p>
+                        </div>
+                    </div>
+                </div>
 
-      <!-- Card 2 -->
-      <div class="gallery-card">
-        <img src="https://img.freepik.com/free-photo/side-view-tea-pouring-into-armudu-glass_140725-12196.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Premium Selection">
-        <div class="overlay">
-          <div class="overlay-content">
-            <h3>Premium Selection</h3>
-            <p>Rare and exclusive tea varieties</p>
-          </div>
-        </div>
-      </div>
+                <!-- Card 2 -->
+                <div class="gallery-card">
+                    <img src="https://img.freepik.com/free-photo/side-view-tea-pouring-into-armudu-glass_140725-12196.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80"
+                        alt="Premium Selection">
+                    <div class="overlay">
+                        <div class="overlay-content">
+                            <h3>Premium Selection</h3>
+                            <p>Rare and exclusive tea varieties</p>
+                        </div>
+                    </div>
+                </div>
 
-      <!-- Card 3 -->
-      <div class="gallery-card">
-        <img src="https://img.freepik.com/premium-photo/transparent-glass-cup-tea-with-splashes-tea-green-leaves-dark-black-background_1375313-35.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Herbal Blends">
-        <div class="overlay">
-          <div class="overlay-content">
-            <h3>Herbal Blends</h3>
-            <p>Natural wellness in every sip</p>
-          </div>
-        </div>
-      </div>
+                <!-- Card 3 -->
+                <div class="gallery-card">
+                    <img src="https://img.freepik.com/premium-photo/transparent-glass-cup-tea-with-splashes-tea-green-leaves-dark-black-background_1375313-35.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80"
+                        alt="Herbal Blends">
+                    <div class="overlay">
+                        <div class="overlay-content">
+                            <h3>Herbal Blends</h3>
+                            <p>Natural wellness in every sip</p>
+                        </div>
+                    </div>
+                </div>
 
-      <!-- Card 4 -->
-      <div class="gallery-card">
-        <img src="https://img.freepik.com/free-photo/front-view-cup-tea-with-lemon-cinnamon-kettle-grey-surface_140725-63671.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Seasonal Specials">
-        <div class="overlay">
-          <div class="overlay-content">
-            <h3>Seasonal Specials</h3>
-            <p>Limited edition seasonal flavors</p>
-          </div>
-        </div>
-      </div>
+                <!-- Card 4 -->
+                <div class="gallery-card">
+                    <img src="https://img.freepik.com/free-photo/front-view-cup-tea-with-lemon-cinnamon-kettle-grey-surface_140725-63671.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80"
+                        alt="Seasonal Specials">
+                    <div class="overlay">
+                        <div class="overlay-content">
+                            <h3>Seasonal Specials</h3>
+                            <p>Limited edition seasonal flavors</p>
+                        </div>
+                    </div>
+                </div>
 
-      <!-- Card 5 -->
-      <div class="gallery-card">
-        <img src="https://img.freepik.com/premium-photo/cup-tea-being-poured-into-glass-cup-with-steam-coming-out-it-generative-ai_97167-6300.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Organic Range">
-        <div class="overlay">
-          <div class="overlay-content">
-            <h3>Organic Range</h3>
-            <p>100% certified organic teas</p>
-          </div>
-        </div>
-      </div>
+                <!-- Card 5 -->
+                <div class="gallery-card">
+                    <img src="https://img.freepik.com/premium-photo/cup-tea-being-poured-into-glass-cup-with-steam-coming-out-it-generative-ai_97167-6300.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80"
+                        alt="Organic Range">
+                    <div class="overlay">
+                        <div class="overlay-content">
+                            <h3>Organic Range</h3>
+                            <p>100% certified organic teas</p>
+                        </div>
+                    </div>
+                </div>
 
-      <!-- Card 6 -->
-      <div class="gallery-card">
-        <img src="https://img.freepik.com/premium-photo/tea-concept-teapot-with-tea-surrounded-wood-background-tea-ceremony-green-tea-transparent-cup_372197-1339.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80" alt="Gift Sets">
-        <div class="overlay">
-          <div class="overlay-content">
-            <h3>Gift Sets</h3>
-            <p>Perfect presents for tea lovers</p>
-          </div>
+                <!-- Card 6 -->
+                <div class="gallery-card">
+                    <img src="https://img.freepik.com/premium-photo/tea-concept-teapot-with-tea-surrounded-wood-background-tea-ceremony-green-tea-transparent-cup_372197-1339.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80"
+                        alt="Gift Sets">
+                    <div class="overlay">
+                        <div class="overlay-content">
+                            <h3>Gift Sets</h3>
+                            <p>Perfect presents for tea lovers</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 </body>
+
 </html>
