News & Events section added

--- a/index.html
+++ b/index.html
@@ -350,7 +350,41 @@
         </div>
     </section>
 
-    <section class="tea-collection">
+    <!-- Statistics Section -->
+    <section class="stats-section container">
+        <div class="stats-wrapper">
+            <div class="stats-grid">
+
+                <div class="stat-item">
+                    <h3>250+</h3>
+                    <p>Tea Varieties</p>
+                    <span class="line"></span>
+                </div>
+
+                <div class="stat-item">
+                    <h3>50K+</h3>
+                    <p>Happy Customers</p>
+                    <span class="line"></span>
+                </div>
+
+                <div class="stat-item">
+                    <h3>15+</h3>
+                    <p>Years Experience</p>
+                    <span class="line"></span>
+                </div>
+
+                <div class="stat-item">
+                    <h3>100%</h3>
+                    <p>Satisfaction Rate</p>
+                    <span class="line"></span>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <!-- Tea Collection Gallery Section -->
+    <section class="tea-collection ">
         <div class="container">
             <div class="section-header">
                 <h2>
@@ -435,6 +469,63 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- News & Events -->
+    <section class="news-section">
+        <div class="container">
+            <h1 class="news-title">News <span class="gradient-text">& Events</span></h1>
+            <p class="news-subtitle">
+                Stay updated with the latest from The Tea House world.
+            </p>
+
+            <div class="news-grid">
+
+                <!-- Card 1 -->
+                <div class="news-card">
+                    <div class="news-image">
+                        <img src="https://img.freepik.com/premium-photo/high-angle-view-various-flowers-bowl-table_1048944-18917101.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80"
+                            alt="Spring Collection">
+                        <span class="news-badge">New</span>
+                    </div>
+                    <p class="news-date">February 15, 2025</p>
+                    <h2 class="news-heading">Spring Collection Launch</h2>
+                    <p class="news-text">
+                        Discover our limited-edition floral blends inspired by blooming gardens.
+                    </p>
+                    <a href="#" class="news-link">Read More →</a>
+                </div>
+
+                <!-- Card 2 -->
+                <div class="news-card">
+                    <div class="news-image">
+                        <img src="https://img.freepik.com/premium-photo/close-up-hand-holding-wine-glass-table_1048944-25560551.jpg?uid=R225953803&ga=GA1.1.638220793.1764174460&semt=ais_hybrid&w=740&q=80"
+                            alt="Workshop">
+                    </div>
+                    <p class="news-date">January 28, 2025</p>
+                    <h2 class="news-heading">Tea Master Workshop</h2>
+                    <p class="news-text">
+                        Join our exclusive tasting event with world-renowned tea sommeliers.
+                    </p>
+                    <a href="#" class="news-link">Read More →</a>
+                </div>
+
+                <!-- Card 3 -->
+                <div class="news-card">
+                    <div class="news-image">
+                        <img src="https://images.unsplash.com/photo-1511690656952-34342bb7c2f2?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80"
+                            alt="Sustainability">
+                    </div>
+                    <p class="news-date">January 20, 2025</p>
+                    <h2 class="news-heading">Sustainability Report</h2>
+                    <p class="news-text">
+                        Learn about our commitment to ethical sourcing and environmental stewardship.
+                    </p>
+                    <a href="#" class="news-link">Read More →</a>
+                </div>
+
             </div>
         </div>
     </section>
