Implement navbar and footer section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,36 @@
 </head>
 
 <body>
+    <header class="navbar">
+        <div class="nav-container">
 
-    <header>
+            <!-- Logo -->
+            <a href="#" class="logo">Tea House</a>
+
+            <!-- Navigation -->
+            <nav class="nav-menu" id="navMenu">
+                <a href="#">Home</a>
+                <a href="#">Shop</a>
+                <a href="#">Subscription</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </nav>
+
+            <!-- CTA Button -->
+            <a href="#" class="nav-btn">Buy Tea</a>
+
+            <!-- Mobile Toggle -->
+            <div class="nav-toggle" id="navToggle">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+        </div>
+    </header>
+
+
+    <section>
         <div class="container">
             <div class="header-wrapper">
 
@@ -47,7 +75,7 @@
 
                 </div>
             </div>
-    </header>
+    </section>
     <!-- Featured Products Section -->
     <section id="featured">
         <div class="container">
@@ -529,6 +557,63 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer-overlay"></div>
+
+        <div class="footer-container">
+            <div class="footer-grid">
+
+                <!-- Brand -->
+                <div class="footer-brand">
+                    <h3 class="logo">Tea House</h3>
+                    <p class="footer-text">
+                        Experience the art of tea with every carefully crafted blend.
+                        From our farms to your cup, we bring you the world's finest selection.
+                    </p>
+
+                    <div class="footer-social">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
+
+                <!-- Quick Links -->
+                <div class="footer-links">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="#">Shop All Teas</a></li>
+                        <li><a href="#">Subscription</a></li>
+                        <li><a href="#">Brewing Guide</a></li>
+                        <li><a href="#">Our Story</a></li>
+                    </ul>
+                </div>
+
+                <!-- Support -->
+                <div class="footer-links">
+                    <h4>Support</h4>
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Shipping Info</a></li>
+                        <li><a href="#">Returns</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <!-- Bottom -->
+            <div class="footer-bottom">
+                <p>
+                    &copy; 2025 Tea House. Crafted with
+                    <span class="heart">❤</span>
+                    for tea lovers everywhere.
+                </p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
